--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -14,3 +14,13 @@ Unit3:
   description: Student teams need to build their own Website and individuals need to blog their learnings. In November, the Trimester will end by presenting team project at the Electives Department "Night at the Museum" (N@tM).
   start: 8
   end: 12
+Unit4: 
+  title: Warm-up Data Abstraction Project, Create Performance Task (CPT) kickoff
+  description: Trimester 2 will begin with a Mini-project. Great projects begin with frontend style. This project will be using SASS, JavaScript, managing user events and representing Algorithms. Tech talks during this period will be preparing for College Board Create Performance Task.
+  start: 13
+  end: 14
+Unit5: 
+  title: CPT design and development, Computer Systems, Networks, Impact of Computing
+  description: Trimester 2 continues with CPT project design and development. Student Teaching will focus on College Board Units 4 and 5.
+  start: 15
+  end: 21
